package br.com.fiap.exception;

public class LimiteInsuficienteException extends Exception {
    public LimiteInsuficienteException(String message) {
        super(message);
    }
}
