package br.com.fiap.exception;

public class RegraNegocioException extends Exception {
    public RegraNegocioException(String message) {
        super(message);
    }
}
